--- a/fog-off/src/app/tab1/tab1.page.scss
+++ b/fog-off/src/app/tab1/tab1.page.scss
@@ -2,3 +2,19 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+.ion-content {
+  --ion-background-color: #111D12
+}
+
+.fs1 {
+  font-size: 1em;
+}
+
+.fs2 {
+  font-size: 2em;
+}
+
+.p05 {
+  padding: 0.5em;
+}
