--- a/fog-off/src/app/tabs/tabs.page.html
+++ b/fog-off/src/app/tabs/tabs.page.html
@@ -7,12 +7,12 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="map"></ion-icon>
+      <ion-icon name="pin"></ion-icon>
       <ion-label>Map</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="star"></ion-icon>
+      <ion-icon name="trophy"></ion-icon>
       <ion-label>Achievements</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
