--- a/fog-off/src/app/tab2/tab2.page.html
+++ b/fog-off/src/app/tab2/tab2.page.html
@@ -6,4 +6,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <div #map id="map" style="height: 100%"></div>
+</ion-content>
