Complete Cloud Cover/Uncover based on Current Coordinates

--- a/fog-off/src/app/tab2/tab2.page.html
+++ b/fog-off/src/app/tab2/tab2.page.html
@@ -7,5 +7,50 @@
 </ion-header>
 
 <ion-content>
-  <div #map id="map" style="height: 100%"></div>
+  <div class="map" #map id="map" style="height: 100%">
+    <div class="cloud grid-full">
+
+      <ion-grid class="cloud grid-full" #cloud id="cloud" style="height: 100%;">
+    
+        <ion-row class="row-03">
+          <ion-col size="4">
+
+          </ion-col>
+          <ion-col size="4">
+
+          </ion-col>
+          <ion-col size="4">
+
+          </ion-col>
+        </ion-row>
+          
+        <ion-row class="row-03">
+          <ion-col size="4">
+
+          </ion-col>
+          <ion-col size="4">
+
+          </ion-col>
+          <ion-col size="4">
+
+          </ion-col>
+        </ion-row>
+
+        <ion-row class="row-03">
+          <ion-col size="4">
+
+          </ion-col>
+          <ion-col size="4">
+
+          </ion-col>
+          <ion-col size="4">
+
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
+
+    </div>
+  </div>
+
 </ion-content>
