--- a/fog-off/src/app/tab2/tab2.page.html
+++ b/fog-off/src/app/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title text-center>
+  <ion-toolbar color="primary">
+    <ion-title>
       Map 
     </ion-title>
   </ion-toolbar>
