--- a/fog-off/src/app/modal-page/modal-page.page.html
+++ b/fog-off/src/app/modal-page/modal-page.page.html
@@ -12,6 +12,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content class="vague-content">
+  <ion-button class="cc_spacing" expand="block" shape="round" size="large" color="persianred" (click)="dismissRed()"></ion-button>
+  <ion-button class="cc_spacing" expand="block" shape="round" size="large" color="ksupurple" (click)="dismissPurple()"></ion-button>
+  <ion-button class="cc_spacing" expand="block" shape="round" size="large" color="cerulean" (click)="dismissBlue()"></ion-button>
+  <ion-button class="cc_spacing" expand="block" shape="round" size="large" color="neongreen" (click)="dismissGreen()"></ion-button>
 </ion-content>
